--- a/src/app/features/level-management/level-management-add/level-management-add.component.html
+++ b/src/app/features/level-management/level-management-add/level-management-add.component.html
@@ -1,67 +1,124 @@
-<nz-modal nzWidth="650px" [(nzVisible)]="isVisiblePopUpAddLevelManagement" nzCentered [nzContent]="modalContent"
-    [nzFooter]="null" (nzOnCancel)="handleCancel()">
-
-    <ng-template #modalContent>
-        <div class="text-start border-b border-primary pb-2 text-primary font-medium text-[22px]">
+<nz-modal 
+    nzWidth="550px" 
+    [(nzVisible)]="isVisiblePopUpAddLevelManagement" 
+    nzCentered 
+    [nzTitle]="modalTitle"
+    [nzContent]="modalContent"
+    [nzFooter]="modalFooter" 
+    (nzOnCancel)="handleCancel()"
+    class="custom-modal"
+>
+    <ng-template #modalTitle>
+        <div class="text-primary font-medium text-lg flex items-center">
+            <i class="fa-solid {{ edit ? 'fa-pen-to-square' : 'fa-plus-circle' }} mr-2"></i>
             <span>{{edit ? 'Chỉnh sửa chức vụ' : 'Thêm chức vụ mới'}}</span>
         </div>
+    </ng-template>
 
-        <div class="flex flex-col mt-5 gap-2 h-fit w-full pb-2 overflow-auto">
-            <form [formGroup]="form"
-                class="flex flex-col w-full h-fit gap-2 pb-2 overflow-auto">
-                <div class="flex flex-col w-full flex-1">
-                    <span class="font-medium">Tên chức vụ<span class="text-red-500">*</span></span>
-                    <mat-form-field class="custom-input " appearance="outline">
-                        <input matInput formControlName="levelName" />
+    <ng-template #modalContent>
+        <div class="py-2">
+            <form [formGroup]="form" class="flex flex-col gap-4">
+                <!-- Position Name Field -->
+                <div class="flex flex-col">
+                    <label class="font-medium text-gray-700 mb-1">
+                        Tên chức vụ<span class="text-red-500 ml-1">*</span>
+                    </label>
+                    <mat-form-field class="custom-input" appearance="outline">
+                        <input 
+                            matInput 
+                            formControlName="levelName" 
+                            placeholder="Nhập tên chức vụ"
+                            class="py-1"
+                        />
                         <mat-error
-                            *ngIf="form.get('levelName')?.errors?.['required']&& (form.get('levelName')?.dirty || form.get('levelName')?.touched)"
-                            class="text-red-600">
+                            *ngIf="form.get('levelName')?.errors?.['required'] && (form.get('levelName')?.dirty || form.get('levelName')?.touched)"
+                            class="text-red-600"
+                        >
                             {{'PopUpRegister.noEmty'|translate}}
                         </mat-error>
                     </mat-form-field>
                 </div>
-                <div class="flex flex-col w-full flex-1 mb-20">
-                    <span class="font-medium">Mô tả</span>
-                    <mat-form-field class="custom-input " appearance="outline">
-                        <textarea matInput formControlName="description" rows="5"></textarea>
+                
+                <!-- Description Field -->
+                <div class="flex flex-col">
+                    <label class="font-medium text-gray-700 mb-1">
+                        Mô tả
+                    </label>
+                    <mat-form-field class="custom-input" appearance="outline">
+                        <textarea 
+                            matInput 
+                            formControlName="description" 
+                            rows="4"
+                            placeholder="Nhập mô tả chi tiết về chức vụ này"
+                            class="py-1"
+                        ></textarea>
                     </mat-form-field>
                 </div>
-                <div class="flex flex-col w-full flex-1">
-                    <span class="font-medium">Trạng thái<span class="text-red-500">*</span></span>
-                    <mat-form-field class="custom-input " appearance="outline">
-                        <mat-select formControlName="status">
+                
+                <!-- Status Field -->
+                <div class="flex flex-col">
+                    <label class="font-medium text-gray-700 mb-1">
+                        Trạng thái<span class="text-red-500 ml-1">*</span>
+                    </label>
+                    <mat-form-field class="custom-input" appearance="outline">
+                        <mat-select 
+                            formControlName="status"
+                            placeholder="Chọn trạng thái"
+                        >
                             <mat-option *ngFor="let status of listStatus" [value]="status.value">
-                              {{ status.label }}
+                                <div class="flex items-center">
+                                    <span class="w-2 h-2 rounded-full mr-2" 
+                                    [ngClass]="{'bg-green-500': status.value, 'bg-red-500': !status.value}"></span>
+                                    {{ status.label }}
+                                </div>
                             </mat-option>
                         </mat-select>
                         <mat-error
-                            *ngIf="form.get('status')?.errors?.['required']&& (form.get('status')?.dirty || form.get('status')?.touched)"
-                            class="text-red-600">
+                            *ngIf="form.get('status')?.errors?.['required'] && (form.get('status')?.dirty || form.get('status')?.touched)"
+                            class="text-red-600"
+                        >
                             {{'PopUpRegister.noEmty'|translate}}
                         </mat-error>
                     </mat-form-field>
                 </div>
             </form>
         </div>
-        <!-- <div class="flex gap-3 justify-center">
-            <button nz-button nzType="primary"
-                class="!bg-primary w-[120px] border-none rounded-lg hover:opacity-60 hover:bg-primary text-white hover:text-black"
-                (click)="handleOk()">Thêm mới</button>
-            <button nz-button
-                class="!bg-[#969696] font-medium w-[120px] border-none rounded-lg hover:opacity-60 text-white"
-                (click)="handleCancel()">Huỷ bỏ</button>
-        </div> -->
-        <div class="flex gap-3 justify-center">
-            <button *ngIf="!edit" nz-button nzType="primary"
-                class="!bg-primary w-[120px] border-none rounded-lg hover:opacity-60 hover:bg-primary text-white hover:text-black"
-                (click)="handleOk()">Thêm mới</button>
-            <button *ngIf="edit" nz-button nzType="primary"
-                class="!bg-primary w-[120px] border-none rounded-lg hover:opacity-60 hover:bg-primary text-white hover:text-black"
-                (click)="handleEdit()">Chỉnh sửa</button>
-            <button nz-button
-                class="!bg-[#969696] font-medium w-[120px] border-none rounded-lg hover:opacity-60 text-white"
-                (click)="handleCancel()">Huỷ bỏ</button>
+    </ng-template>
+
+    <ng-template #modalFooter>
+        <div class="flex gap-3 justify-center pt-2">
+            <button 
+                *ngIf="!edit" 
+                nz-button 
+                nzType="primary"
+                class="min-w-28 bg-primary border-none rounded-lg hover:opacity-90 text-white flex items-center justify-center gap-2"
+                [disabled]="form.invalid"
+                (click)="handleOk()"
+            >
+                <i class="fa-solid fa-check"></i>
+                <span>Thêm mới</span>
+            </button>
+            
+            <button 
+                *ngIf="edit" 
+                nz-button 
+                nzType="primary"
+                class="min-w-28 bg-primary border-none rounded-lg hover:opacity-90 text-white flex items-center justify-center gap-2"
+                [disabled]="form.invalid"
+                (click)="handleEdit()"
+            >
+                <i class="fa-solid fa-pen"></i>
+                <span>Cập nhật</span>
+            </button>
+            
+            <button 
+                nz-button
+                class="min-w-28 bg-gray-500 font-medium border-none rounded-lg hover:opacity-90 text-white flex items-center justify-center gap-2"
+                (click)="handleCancel()"
+            >
+                <i class="fa-solid fa-times"></i>
+                <span>Huỷ bỏ</span>
+            </button>
         </div>
     </ng-template>
 </nz-modal>
-
